2012-12-12  Martin Robinson  <mrobinson@igalia.com>

        [GTK] Add authentication support to DRT and fix exposed issues in the libsoup backend
        https://bugs.webkit.org/show_bug.cgi?id=104285

        Reviewed by Gustavo Noronha Silva.

        Unskip authentication tests now that authentication support is in
        the harness and issues in the libsoup backend are fixed. Also remove
        two expected results for tests that now have the same output as
        other platforms.

        * platform/gtk/TestExpectations:
        * platform/gtk/http/tests/misc/401-alternative-content-expected.txt: Removed.
        * platform/gtk/http/tests/xmlhttprequest/failed-auth-expected.txt: Removed.

2012-12-12  Chris Fleizach  <cfleizach@apple.com>

        AX: aria-busy should be exposed everywhere, not just on live regions
        https://bugs.webkit.org/show_bug.cgi?id=104814

        Reviewed by Anders Carlsson.

        Update tests that dump all attributes to include aria busy attribute.

        * accessibility/transformed-element-expected.txt:
        * platform/mac/accessibility/aria-liveregions-attributes-expected.txt:
        * platform/mac/accessibility/bounds-for-range-expected.txt:
        * platform/mac/accessibility/document-attributes-expected.txt:
        * platform/mac/accessibility/document-links-expected.txt:
        * platform/mac/accessibility/image-link-expected.txt:
        * platform/mac/accessibility/image-map2-expected.txt:
        * platform/mac/accessibility/internal-link-anchors-expected.txt:
        * platform/mac/accessibility/internal-link-anchors2-expected.txt:
        * platform/mac/accessibility/lists-expected.txt:
        * platform/mac/accessibility/plugin-expected.txt:
        * platform/mac/accessibility/radio-button-group-members-expected.txt:
        * platform/mac/accessibility/table-attributes-expected.txt:
        * platform/mac/accessibility/table-cell-spans-expected.txt: