@@ -1,3 +1,13 @@
+2012-12-12  James Simonsen  <simonjam@chromium.org>
+
+        [Resource Timing] Failed resources shouldn't be recorded in the buffer
+        https://bugs.webkit.org/show_bug.cgi?id=104762
+
+        Reviewed by Tony Gentilcore.
+
+        * http/tests/w3c/webperf/submission/resource-timing/html/test_resource_ignore_failures-expected.txt: Added.
+        * http/tests/w3c/webperf/submission/resource-timing/html/test_resource_ignore_failures.html: Added.
+
 2012-12-12  Martin Robinson  <mrobinson@igalia.com>
 
         [GTK] Add authentication support to DRT and fix exposed issues in the libsoup backend
